Infrastructure/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - http:
        paths:
          - path: /api/coin
            pathType: Prefix
            backend:
              service:
                name: cointracker-api-coinlist
                port:
                  number: 80
          - path: /api/wallet
            pathType: Prefix
            backend:
              service:
                name: cointracker-api-wallets
                port:
                  number: 80
